@@ -24,7 +24,8 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.zip.ZipException;
 
 /**
- * ZipExtraField related methods
+ * {@link ZipExtraField} related methods.
+ *
  * @NotThreadSafe because the HashMap is not synchronized.
  */
 // CheckStyle:HideUtilityClassConstructorCheck OFF (bc)
@@ -407,7 +408,7 @@ public class ExtraFieldUtils {
      */
     public static void register(final Class<?> c) {
         try {
-            final ZipExtraField ze = (ZipExtraField) c.newInstance();
+            final ZipExtraField ze = (ZipExtraField) c.getConstructor().newInstance();
             IMPLEMENTATIONS.put(ze.getHeaderId(), c);
         } catch (final ClassCastException cc) { // NOSONAR
             throw new IllegalArgumentException(c + " doesn't implement ZipExtraField"); //NOSONAR
@@ -415,6 +416,8 @@ public class ExtraFieldUtils {
             throw new IllegalArgumentException(c + " is not a concrete class"); //NOSONAR
         } catch (final IllegalAccessException ie) { // NOSONAR
             throw new IllegalArgumentException(c + "'s no-arg constructor is not public"); //NOSONAR
+        } catch (ReflectiveOperationException e) {
+            throw new IllegalArgumentException(c + ": " + e); //NOSONAR
         }
     }
 }
